# Learning-Robotics-using-Python-Second-Edition

./: README.md
chapter_1_code/hello_world/: CMakeLists.txt  package.xml
chapter_1_code/hello_world/scripts/: hello_world_publisher.py  hello_world_subscriber.py
chapter_2_code/: README.txt
chapter_3_code/: FINAL_IN_WINDOWS.blend  script_linux.py
chapter_3_code/2d_designs/: ##1st_plate_copy_with_no_dim.dxf  ##1st_plate_copy_with_no_dim.dxf~  1st_plate.dxf  1st_plate.dxf~  1st_plate_copy.dxf  1st_plate_copy.dxf~  1st_plate_copy_with_no_dim.dxf  1st_plate_copy_with_no_dim.dxf~  2nd_plate.dxf  2nd_plate.dxf~  3rd_plate.dxf  3rd_plate.dxf~  base_plate.dxf  tubes.dxf  tubes.dxf~  tubes_15cm.dxf  tubes_15cm.dxf~  tubes_20cm.dxf  tubes_20cm.dxf~
chapter_3_code/chefbot_description/: CMakeLists.txt
chapter_3_code/chefbot_description/launch/: view_robot_gazebo.launch
chapter_4_code/chefbot_description/: package.xml
chapter_4_code/chefbot_description/launch/: view_navigation.launch
chapter_4_code/chefbot_description/urdf/: chefbot.xacro
chapter_4_code/chefbot_gazebo/: CMakeLists.txt
chapter_6_code/code_motor/: dynamixel_test_code.py  moto_test_firmware.pde  simple_encoder_test.ino  simple_motor_test
chapter_6_code/code_sensor/: 7536OS_06_01.txt  7536OS_06_02.ino  7536OS_06_03.ino  hc_sr04.ino  imu_new.ino
chapter_7_code/: cam.py  cv_bridge_demo.py  img_read.py
chapter_7_code/sample_opencv_pkg/: CMakeLists.txt  package.xml
chapter_8_code/Energia_Arduino_FirmwareCode/: new_sensor_sketch_without_imu_ultra.ino
chapter_8_code/chefbot_gazebo/: package.xml
(+45 files in other folders)
