<?xml version="1.0"?>
<package format="2">
  <name>chefbot_description</name>
  <version>0.0.1</version>
  <description>The chefbot_description package</description>


  <maintainer email="qboticslabs@gmail.com">Lentin Joseph</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>xacro</exec_depend>


</package>
